fix z-index for links mb

--- a/public/style.css
+++ b/public/style.css
@@ -60,6 +60,7 @@ table { margin-left: auto; margin-right: auto; }
     position: fixed;
     text-align: center;
     width: 100%;
+    z-index: 5;
 }
 #t1btn { display: none; height: 25%; }
 #t2btn { display: none; height: 25%; }
